--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "gridfs-stream": "^1.1.1",
     "helmet": "^3.4.0",
     "joi": "^10.2.1",
     "jsonwebtoken": "^7.3.0",
@@ -21,6 +22,7 @@
     "mongoose": "^4.8.5",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "~1.7.0",
+    "multiparty": "^4.1.3",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
