--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Backend Restful API for anniversary",
   "scripts": {
-    "start": "NODE_ENV=development node app.js"
+    "start": "NODE_ENV=docker-dev node app.js"
   },
   "dependencies": {
     "bluebird": "^3.4.7",
@@ -18,6 +18,7 @@
     "helmet": "^3.4.0",
     "joi": "^10.2.1",
     "jsonwebtoken": "^7.3.0",
+    "kafka-node": "^1.6.0",
     "moment": "^2.17.1",
     "mongoose": "^4.8.5",
     "mongoose-timestamp": "^0.6.0",
@@ -26,6 +27,7 @@
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
+    "protocol-buffers": "^3.2.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
