--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
     "mocha": "^3.2.0"
   }
 }
